--- a/package.json
+++ b/package.json
@@ -1,16 +1,28 @@
 {
-  "name": "react-dashboard",
+  "name": "login",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.5",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "firebase": "^8.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
+    "react-firebase-auth-hooks": "^1.0.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-phone-input-2": "^2.15.1",
+    "react-redux": "^8.1.0",
+    "react-router": "^6.13.0",
+    "react-router-dom": "^6.13.0",
+    "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
     "sweetalert2": "^11.7.12",
     "web-vitals": "^2.1.4"
   },
